Fix overflow on homepage.

--- a/state_gov_tracker_app/templates/css/style.less
+++ b/state_gov_tracker_app/templates/css/style.less
@@ -74,6 +74,10 @@ body {
 
 /* Main Search Page */
 
+.overflow_stop {
+	overflow-y:hidden;
+}
+
 #search {
 	width:653px;
 	margin:150px 0 0 -120px;
